dropdown icon mobile fix

--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -41,6 +41,7 @@ $block: 'dropdown';
       display: flex;
       justify-content: center;
       align-items: center;
+      font-size: -0.1px;
     }
   }
   &__expand-more_hovered::before,
